# cachetest

./: CMakeLists.txt  README.md  main.c
.github/workflows/: linux.yml  macos.yaml  msys2.yml  windows.yml
